manifests/default/webapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: bharatradar
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: bharatradar
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: webapp
          image: ghcr.io/bharatradar/webapp:v2025.05.07.08
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /command_center/api/filters
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /command_center/api/filters
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
