manifests/default/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: bharatradar
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
  - hosts:
    - bharatradar.com
    secretName: bharatradar-tls
  rules:
  - host: bharatradar.com
    http:
      paths:
      - path: /command_center
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              name: http
